# BlendShapeBuilder

./: .gitignore  Readme.md  Readme_EN.md  package.json
.BlendShapeBuilder/Assets/UTJ/: BlendShapeBuilder  VertexTweaker
.BlendShapeBuilder/Plugin/: CMakeLists.txt  MeshUtils.vcxproj  VertexTweakerCore.sln  VertexTweakerCore.vcxproj  VertexTweakerCore.vcxproj.filters  build.bat  setup.bat  setup.vcxproj
.BlendShapeBuilder/Plugin/MeshUtils/: muMeshRefiner.cpp
.BlendShapeBuilder/Plugin/VertexTweaker/: CMakeLists.txt  VertexTweaker.cpp
.BlendShapeBuilder/ProjectSettings/: ProjectSettings.asset
Assets/BlendShapeBuilder/Editor/: BlendShapeBuilderEditor.cs  BlendShapeBuilderWindow.cs  BlendShapeInspectorWindow.cs  UTJ.BlendShapeBuilderEditor.asmdef
Assets/BlendShapeBuilder/Runtime/: UTJ.BlendShapeBuilder.asmdef
Assets/BlendShapeBuilder/Runtime/Scripts/: BlendShapeBuilder.cs
Assets/Editor/BlendShapeBuilder/: BlendShapeBuilderEditor.cs
Assets/Editor/VertexTweaker/: VertexTweakerEditor.cs  VertexTweakerWindow.cs
Assets/VertexTweaker/Editor/: UTJ.VertexTweakerEditor.asmdef  VertexTweakerEditor.cs  VertexTweakerWindow.cs
Assets/VertexTweaker/Runtime/: UTJ.VertexTweaker.asmdef
BlendShapeBuilder/Assets/: BlendShapeBuilderPackaging.cs
Plugin/: BlendShapeBuilderCore.sln  BlendShapeBuilderCore.vcxproj  CMakeLists.txt  VertexTweakerCore.sln  VertexTweakerCore.vcxproj.filters  build.bat  setup.vcxproj
Plugin/BlendShapeBuilder/: BlendShapeBuilder.cpp  CMakeLists.txt
Plugin/MeshUtils/: ispcmath.h  muMath.h
Plugin/VertexTweaker/: VertexTweaker.cpp
(+42 files in other folders)
